--- a/portfolio_website_setup/myproject/render.yaml
+++ b/portfolio_website_setup/myproject/render.yaml
@@ -1,1 +1,9 @@
+services:
+  - type: web
+    name: my-flask-app
+    env: python
+    region: oregon
+    plan: free
+    buildCommand: pip install -r requirements.txt
+    startCommand: gunicorn app.wsgi:app
 
